<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/charts_layout">

    <Button
        android:id="@+id/exit_charts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/exit_game" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/charts"
        android:textColor="#0000ff"
        android:textSize="32sp"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >
    </ListView>

    <TextView
        android:id="@+id/textView2"
        style="@style/TextStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView"
        android:layout_below="@+id/textView1"
        android:text="@string/id" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/score" />

    <TextView
        android:id="@+id/textView4"
        style="@style/TextStyle"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_toRightOf="@+id/textView1"
        android:text="@string/date" />

</RelativeLayout>