<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/select_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@+id/mylist"
        android:layout_width="287dp"
        android:layout_height="match_parent"
        android:divider="@drawable/red" />

    <Button
        android:id="@+id/exit_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/exit_game" />

    <TextView
        android:id="@+id/textView1"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:layout_toLeftOf="@+id/exit_select"
        android:text="@string/music" />

    <ToggleButton
        android:id="@+id/btntoggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView1"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <Button
        android:id="@+id/select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/mylist"
        android:background="@drawable/back_select" />

    <ToggleButton
        android:id="@+id/btntoggle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btntoggle"
        android:textOff="@string/off"
        android:textOn="@string/on" />

    <TextView
        android:id="@+id/TextView01"
        style="@style/TextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignTop="@+id/btntoggle2"
        android:text="@string/sound" />

</RelativeLayout>